<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity" >

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_item_1"
            android:icon="@drawable/ic_find_loc"
            android:title="@string/toolbar"/>

        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/ic_find_loc"
            android:title="@string/fab"/>

        <item
            android:id="@+id/navigation_item_3"
            android:icon="@drawable/ic_find_loc"
            android:title="@string/snackbar"/>

        <item
            android:id="@+id/navigation_item_4"
            android:icon="@drawable/ic_find_loc"
            android:title="@string/tabs"/>

        <item
            android:id="@+id/navigation_item_5"
            android:icon="@drawable/ic_find_loc"
            android:title="@string/coordinatorLayout"/>

        <item
            android:id="@+id/navigation_item_6"
            android:icon="@drawable/ic_find_loc"
            android:title="@string/collapsingToolbarLayout"/>

        <item
            android:id="@+id/navigation_item_7"
            android:icon="@drawable/ic_find_loc"
            android:title="@string/navigationView"/>
    </group>

</menu>